; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/uio/extr_uio.c_uio_fasync.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/uio/extr_uio.c_uio_fasync.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { %struct.uio_listener* }
%struct.uio_listener = type { %struct.uio_device* }
%struct.uio_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.file*, i32)* @uio_fasync to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @uio_fasync(i32 %0, %struct.file* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.file*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.uio_listener*, align 8
  %8 = alloca %struct.uio_device*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.file* %1, %struct.file** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load %struct.file*, %struct.file** %5, align 8
  %10 = getelementptr inbounds %struct.file, %struct.file* %9, i32 0, i32 0
  %11 = load %struct.uio_listener*, %struct.uio_listener** %10, align 8
  store %struct.uio_listener* %11, %struct.uio_listener** %7, align 8
  %12 = load %struct.uio_listener*, %struct.uio_listener** %7, align 8
  %13 = getelementptr inbounds %struct.uio_listener, %struct.uio_listener* %12, i32 0, i32 0
  %14 = load %struct.uio_device*, %struct.uio_device** %13, align 8
  store %struct.uio_device* %14, %struct.uio_device** %8, align 8
  %15 = load i32, i32* %4, align 4
  %16 = load %struct.file*, %struct.file** %5, align 8
  %17 = load i32, i32* %6, align 4
  %18 = load %struct.uio_device*, %struct.uio_device** %8, align 8
  %19 = getelementptr inbounds %struct.uio_device, %struct.uio_device* %18, i32 0, i32 0
  %20 = call i32 @fasync_helper(i32 %15, %struct.file* %16, i32 %17, i32* %19)
  ret i32 %20
}

declare dso_local i32 @fasync_helper(i32, %struct.file*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
